# qt-qml-project-template-with-ci

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .qmake.conf  AUTHORS  CMakeLists.txt  OUR_QML_STYLE_GUIDELINES.md  README.md  bitbucket-pipelines.yml  build_app.sh  build_cmake_app.sh  build_ios_app.sh  compiler_flags.pri  cookiecutterize.sh  cutterize_and_test.sh  install_linux.sh  main_gui.pro  path_to_android_qmake.bash  path_to_ios_qmake.bash  path_to_qmake.bash  qmake.conf  run_all_tests.sh  windows.pri
json_bug_repro/: CMakeLists.txt  main.cpp
json_bug_repro/ci/: win_ci.sh
json_bug_repro/ci/qtapps/: ci.sh  provision_win.sh  requirements.txt
json_bug_repro/qml/: Main.qml
src/app/: CMakeLists.txt  app.pro  event_filter.cc  event_filter.h  gui_tests.cc  gui_tests.h  imports.qml  main.cc  qml_message_interceptor.cc  qml_message_interceptor.h  view_model_collection.cc  view_model_collection.h
src/app/ios/: Info.plist
src/lib_app/: CMakeLists.txt  cli_options.cc  cli_options.h  lib.cc  lib.h  lib.pri  lib.pro  lib_tests.pro  libresources.qrc  logging_tags.cc  logging_tags.h  navigation_test.cc  quarantined_awaiting_warning_fixes.h  resources.cc
src/lib_app/android/: AndroidManifest.xml  build.gradle  intent_to_email.cc
src/lib_app/ios/: ios_log_redirect.cc  ios_log_redirect.h  ios_log_redirect.mm
src/lib_app/qml/: ColorPaletteSwatch.qml  DebugRectangle.qml  ImageSvgHelper.qml  README_qmlscene.md  images  main.qml  qmldir  runstyledscene  viewColorPalette.qml
src/lib_app/qml/dummydata/: customLoggingCategories.qml  resourceHelper.qml
src/lib_app/sample_external_headers/: sample_header_exempt_from_warnings.h
src/libstyles/: CMakeLists.txt  libstyles.pri  libstyles.pro  resource_helper.cc  resource_helper.h  resources.h
src/libstyles/imports/libstyles/: Fonts.qml  Theme.qml  libstyles.qrc  qmldir
src/libtests/: CMakeLists.txt  libtestmain.pri  libtestmain.pro  libtestmain_deps.pri
src/minutil/: CMakeLists.txt  logger.cc  logger.h  minutil.pri  minutil.pro  x_unistd.cc  x_unistd.h
src/util/: CMakeLists.txt  am_i_inside_debugger.cc  am_i_inside_debugger.h  deleter_with_qt_deferred_deletion.cc  deleter_with_qt_deferred_deletion.h  every_so_often.cc  every_so_often.h  performance_counter.cc  performance_counter.h  qml_list_property_helper.h  qml_message_interceptor.cc  qml_message_interceptor.h  register_type.h  timer_service.cc  timer_service.h  usage_log_t.hpp  util.pri  util.pro  version.h
src/util/android/: detect_debugging.cc
src/util/tests/: timer_service_test.cc
{{ cookiecutter.folder_name }}/: .clang-format  .gitattributes  .gitignore  219Design.LICENSE.txt  CMakeLists.txt  OUR_CMAKE_USAGE_GUIDELINES.md  README.md  android.pri  bitbucket-pipelines.yml  build_app.sh  build_cmake_app.sh  build_ios_app.sh  cmake-format.yaml  compiler_flags.pri  cross_platform.pri  init_repo.sh  install_linux.sh  main_gui.pro  path_to_android_qmake.bash  path_to_ios_qmake.bash  path_to_qmake.bash  run_all_tests.sh  verify_authors.sh  windows.pri
{{ cookiecutter.folder_name }}/.github/workflows/: cmakebuild_linux.yml  cmakebuild_windows.yml  cookiecutter.yml  mac.yml  mac2023.yml  main.yml  qt6_linux.yml  verify_authors.yml
{{ cookiecutter.folder_name }}/cmake_include/: cross_platform_settings.cmake  win_msvc_settings.cmake
{{ cookiecutter.folder_name }}/src/app/: CMakeLists.txt  app.pro  event_filter.cc  event_filter.h  gui_tests.cc  gui_tests.h  imports.qml  main.cc  view_model_collection.cc  view_model_collection.h
{{ cookiecutter.folder_name }}/src/app/ios/: Info.plist
{{ cookiecutter.folder_name }}/src/assert/: README.md  assert.pri  util-assert.h
{{ cookiecutter.folder_name }}/src/lib_app/: CMakeLists.txt  cli_options.cc  cli_options.h  lib.cc  lib.h  lib.pro  lib_deps.pri  lib_tests.pro  libresources.qrc  logging_tags.cc  logging_tags.h  navigation_test.cc  quarantined_awaiting_warning_fixes.h  resources.cc  resources.h
{{ cookiecutter.folder_name }}/src/lib_app/android/: intent_to_email.cc
{{ cookiecutter.folder_name }}/src/lib_app/ios/: ios_log_redirect.cc  ios_log_redirect.h  (+1 more)
{{ cookiecutter.folder_name }}/src/lib_example_shared/: CMakeLists.txt  example_shared.cc  example_shared.h  lib_example_shared.pri
{{ cookiecutter.folder_name }}/src/libstyles/: CMakeLists.txt  libstyles.pro  libstyles_global.h  resource_helper.cc  resource_helper.h  resources.cc  resources.h
{{ cookiecutter.folder_name }}/src/libtests/: CMakeLists.txt  libtestmain.pro  qt_test_main.cc  test_main.cc
{{ cookiecutter.folder_name }}/src/minutil/: logger.cc  logger.h  minutil.pro  x_unistd.cc  x_unistd.h
{{ cookiecutter.folder_name }}/src/util/: CMakeLists.txt  am_i_inside_debugger.cc  am_i_inside_debugger.h  deleter_with_qt_deferred_deletion.cc  deleter_with_qt_deferred_deletion.h  every_so_often.cc  every_so_often.h  qml_list_property_helper.h  qml_message_interceptor.cc  qml_message_interceptor.h  timer_service.cc  timer_service.h  usage_log_t.hpp  util.pri  util_tests.pro
{{ cookiecutter.folder_name }}/src/version.genfiles.input/: version.h
{{ cookiecutter.folder_name }}/sw_arch_doc/: README.md  all_src.dot  excludes.txt  generate_graph.sh  print_graph_edges_from_pound_includes.py
{{ cookiecutter.folder_name }}/tools/: update_version_strings.sh
{{ cookiecutter.folder_name }}/tools/AppImage/: app.desktop
{{ cookiecutter.folder_name }}/tools/auto_test/: run_cpp_auto_tests.sh
{{ cookiecutter.folder_name }}/tools/ci/: build_android_app.sh  get_android_toolchain.sh  get_llvm_clang-format.sh  get_qt_libs.sh  get_qt_libs_aqt_mac.sh  get_qt_libs_mac.sh  install-qt.sh  install_android_kits.sh  provision.sh  provision_mac.sh  rootdirhelper.bash  strip_effects_for_sake_of_qt6.patch  version.sh
{{ cookiecutter.folder_name }}/tools/formatters/: clang-format-6.0_clean_output.win.txt.disableattr  enforce_clang_format.sh  enforce_qml_format.exclusions  enforce_qml_format.exclusions.legacy_qmlfmt  enforce_qml_format.sh
{{ cookiecutter.folder_name }}/tools/gui_test/: app_qml_suppressed_warnings.txt  launch_gui_for_display.sh  test_AppImage.sh
(+123 files in other folders)
