cmake_minimum_required(
  VERSION 3.20
)

cmake_policy(
  VERSION
  3.20
)

if(NOT
   DEFINED
   ENV{Qt5_DIR}
)
  message(
    FATAL_ERROR
      "You must set Qt5_DIR. This project was intended to be very\
 strict about requiring your explicit path to your chosen Qt toolchain.\
 (remove this check from the project if/when no longer relevant)"
  )
endif()

if(NOT
   DEFINED
   ENV{Qt6_DIR}
)
  message(
    FATAL_ERROR
      "You must set Qt6_DIR. This project was intended to be very\
 strict about requiring your explicit path to your chosen Qt toolchain.\
 (remove this check from the project if/when no longer relevant)"
  )
endif()

project(
  gui_app
)

set(CMAKE_CXX_STANDARD
    17
)

find_package(
  Qt5
  CONFIG
  REQUIRED
  COMPONENTS Core
             Qml
             Test
             Widgets
             Quick
)

set(CMAKE_AUTOMOC
    ON
)
set(CMAKE_AUTORCC
    ON
)
set(CMAKE_AUTOUIC
    ON
)

set(CMAKE_INCLUDE_CURRENT_DIR
    ON
)

# TODO: are these used in our build right now?
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY
    ${CMAKE_BINARY_DIR}/lib
)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY
    ${CMAKE_BINARY_DIR}/bin
)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY
    ${CMAKE_BINARY_DIR}/bin
)

include(
  cmake_include/cross_platform_settings.cmake
)

message(
  STATUS "CMake install RPATH: ${CMAKE_INSTALL_RPATH}"
)

message(
  STATUS "applying git version numbers"
)
add_custom_target(
  update_version_strings
  ALL
  COMMAND
    "${CMAKE_CURRENT_SOURCE_DIR}/tools/update_version_strings.sh"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/version.genfiles.input/version.h"
    "${CMAKE_BINARY_DIR}/generated_files/autogenerated/version.h"
)

# add_subdirectory(src/util) add_subdirectory(src/libstyles)
# add_subdirectory(src/lib) add_subdirectory(src/libtests)
add_subdirectory(
  src/lib_app
)
add_subdirectory(
  src/libtests
)
add_subdirectory(
  src/libstyles
)
add_subdirectory(
  src/lib_example_shared
)
add_subdirectory(
  src/util
)
add_subdirectory(
  third_party/googletest-release-1.11.0/googlemock
)
add_subdirectory(
  third_party/googletest-release-1.11.0/googletest
)

# install(TARGETS app_prod.exe libstyles COMPONENT executables LIBRARY
# DESTINATION ${CMAKE_INSTALL_PREFIX}/lib RUNTIME DESTINATION
# ${CMAKE_INSTALL_PREFIX}/bin)
